--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
     <script src="https://kit.fontawesome.com/ca5266b6f1.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Portfolio Website/style.css">
 </head>
 
 <body>
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/logo2.PNG" style="border-radius: 20px;" alt="">
+                <img src="Portfolio Website/images/logo2.PNG" style="border-radius: 20px;" alt="">
                 <ul>
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/user-img2.jpg" alt="">
+                    <img src="Portfolio Website/images/user-img2.jpg" alt="">
                 </div>
                 <div class="about-col-2">
                     <h1>About Me</h1>
@@ -93,7 +93,7 @@
             <h1>My Portfolio</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="images/work-1.png" alt="">
+                    <img src="Portfolio Website/images/work-1.png" alt="">
                     <div class="layer">
                         <h3>Social Media App</h3>
                         <p>The app connects you to the talented people around the world.
@@ -102,7 +102,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-2.png" alt="">
+                    <img src="Portfolio Website/images/work-2.png" alt="">
                     <div class="layer">
                         <h3>Music App</h3>
                         <p>The app connects you to the talented people around the world.
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-3.png" alt="">
+                    <img src="Portfolio Website/images/work-3.png" alt="">
                     <div class="layer">
                         <h3>Ecommerce Website</h3>
                         <p>The app connects you to the talented people around the world.
